--- a/SaltGame/Packages/manifest.json
+++ b/SaltGame/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.2",
